# avblocks-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake-variants.yaml  configure.ps1  configure.sh  tasks.py
samples/: CMakeLists.txt  README.md
samples/darwin/: README.md
samples/darwin/audio_upsample/: CMakeLists.txt  audio_upsample.cpp  options.cpp
samples/darwin/dec_aac_adts_file/: CMakeLists.txt  README.md  dec_aac_adts_file.cpp  options.cpp  util.h
samples/darwin/dec_aac_adts_pull/: CMakeLists.txt  README.md  dec_aac_adts_pull.cpp  options.cpp
samples/darwin/dec_avc_au/: CMakeLists.txt  README.md  dec_avc_au.cpp  options.cpp  options.h  program_options.h  util.h
samples/darwin/dec_avc_file/: CMakeLists.txt  README.md  dec_avc_file.cpp  options.cpp
samples/darwin/dec_g711_alaw_file/: CMakeLists.txt  options.cpp
samples/darwin/dec_g711_ulaw_file/: CMakeLists.txt  README.md  dec_g711_ulaw_file.cpp
samples/darwin/dec_hevc_au/: CMakeLists.txt  README.md  dec_hevc_au.cpp  options.h
samples/darwin/dec_hevc_file/: CMakeLists.txt  options.h
samples/darwin/dec_mp3_file/: CMakeLists.txt
samples/darwin/dec_opus_file/: CMakeLists.txt  README.md  options.cpp  util.h
samples/darwin/dec_vorbis_file/: CMakeLists.txt  README.md  dec_vorbis_file.cpp  program_options.h
samples/darwin/dec_vp8_file/: CMakeLists.txt  README.md  dec_vp8_file.cpp  options.cpp  options.h
samples/darwin/dec_vp9_file/: CMakeLists.txt  README.md  dec_vp9_file.cpp  options.cpp
samples/darwin/demux_mp4_file/: CMakeLists.txt  README.md  demux_mp4_file.cpp  options.cpp  options.h
samples/darwin/demux_webm_file/: CMakeLists.txt  demux_webm_file.cpp  options.h  program_options.h
samples/darwin/dump_avc_au/: CMakeLists.txt  dump_avc_au.cpp  options.h  util.cpp  util.h
samples/darwin/dump_hevc_au/: CMakeLists.txt  dump_hevc_au.cpp  options.cpp
samples/darwin/enc_aac_adts_file/: CMakeLists.txt  README.md  enc_aac_adts_file.cpp  options.cpp  util.h
samples/darwin/enc_aac_adts_pull/: CMakeLists.txt  README.md  enc_aac_adts_pull.cpp  options.cpp
samples/darwin/enc_aac_adts_push/: CMakeLists.txt  README.md  enc_aac_adts_push.cpp
samples/darwin/enc_avc_file/: CMakeLists.txt  README.md  enc_avc_file.cpp  options.cpp  util.h
samples/darwin/enc_avc_pull/: CMakeLists.txt  options.cpp  options.h
samples/darwin/enc_g711_alaw_file/: CMakeLists.txt  README.md
samples/darwin/enc_g711_ulaw_file/: CMakeLists.txt  enc_g711_ulaw_file.cpp
samples/darwin/enc_hevc_file/: CMakeLists.txt
samples/darwin/enc_hevc_pull/: CMakeLists.txt  README.md  enc_hevc_pull.cpp  options.cpp  util.h
samples/darwin/enc_mp3_file/: CMakeLists.txt  enc_mp3_file.cpp  options.cpp
samples/darwin/enc_mp3_pull/: CMakeLists.txt  README.md  enc_mp3_pull.cpp  options.cpp
samples/darwin/enc_mp3_push/: CMakeLists.txt  enc_mp3_push.cpp  options.cpp
samples/darwin/enc_opus_file/: CMakeLists.txt  README.md
samples/darwin/enc_preset_file/: CMakeLists.txt  enc_preset_file.cpp  options.cpp  options.h
samples/darwin/enc_vorbis_file/: CMakeLists.txt  README.md  options.cpp
samples/darwin/enc_vp8_file/: CMakeLists.txt  README.md  program_options.h
samples/darwin/enc_vp9_file/: CMakeLists.txt  README.md  options.cpp  program_options.h
samples/darwin/info_metadata_file/: CMakeLists.txt  main.cpp  options.cpp  options.h
samples/darwin/info_stream_file/: AvbUtil.h  CMakeLists.txt  README.md  main.cpp  options.cpp  options.h  util.cpp  util.h
samples/darwin/mux_mp4_file/: CMakeLists.txt  mux_mp4_file.cpp  options.cpp  options.h  util.cpp  util.h
samples/darwin/mux_webm_file/: CMakeLists.txt  README.md  mux_webm_file.cpp  options.cpp  options.h
samples/darwin/re-encode/: CMakeLists.txt  README.md  options.cpp  options.h  re-encode.cpp  util.h
samples/darwin/remux/: CMakeLists.txt  README.md  options.cpp  remux.cpp
samples/darwin/slideshow/: CMakeLists.txt  README.md  options.cpp  options.h  slideshow.cpp  util.h
samples/darwin/video_crop/: CMakeLists.txt  README.md  options.cpp  util.cpp  util.h  video_crop.cpp
samples/darwin/video_framerate/: CMakeLists.txt  options.h  util.cpp
samples/darwin/video_pad/: CMakeLists.txt  README.md  options.cpp  options.h  util.cpp  util.h
samples/darwin/video_upscale/: CMakeLists.txt  README.md  options.h  util.h
samples/dec_avc_au/: CMakeLists.txt  README.md  util.h
samples/dec_avc_au/darwin/: util.h
samples/dec_avc_au/linux/: util.h
samples/linux/: README.md
samples/linux/audio_upsample/: CMakeLists.txt  README.md  options.h
samples/linux/dec_aac_adts_file/: CMakeLists.txt  dec_aac_adts_file.cpp  options.cpp  options.h  util.h
samples/linux/dec_aac_adts_pull/: CMakeLists.txt  dec_aac_adts_pull.cpp  options.h
samples/linux/dec_avc_au/: CMakeLists.txt  dec_avc_au.cpp  options.cpp  options.h  util.h
samples/linux/dec_avc_file/: CMakeLists.txt  README.md  dec_avc_file.cpp  options.cpp  options.h  util.h
samples/linux/dec_g711_alaw_file/: CMakeLists.txt  README.md
samples/linux/dec_g711_ulaw_file/: CMakeLists.txt  options.cpp  util.h
samples/linux/dec_hevc_au/: CMakeLists.txt  dec_hevc_au.cpp  options.cpp
samples/linux/dec_hevc_file/: CMakeLists.txt  README.md  dec_hevc_file.cpp  options.cpp  util.h
samples/linux/dec_mp3_file/: CMakeLists.txt  README.md  dec_mp3_file.cpp  options.cpp
samples/linux/dec_opus_file/: CMakeLists.txt
samples/linux/dec_vorbis_file/: CMakeLists.txt  options.cpp  program_options.h
samples/linux/dec_vp8_file/: CMakeLists.txt  README.md  options.cpp  program_options.h
samples/linux/dec_vp9_file/: CMakeLists.txt  README.md  options.cpp  options.h
samples/linux/demux_mp4_file/: CMakeLists.txt  README.md  demux_mp4_file.cpp  options.cpp  options.h  util.h
samples/linux/demux_webm_file/: CMakeLists.txt  README.md  options.cpp
samples/linux/dump_avc_au/: CMakeLists.txt  README.md  dump_avc_au.cpp  options.cpp  util.h
samples/linux/dump_hevc_au/: CMakeLists.txt  README.md  dump_hevc_au.cpp
samples/linux/enc_aac_adts_file/: CMakeLists.txt  enc_aac_adts_file.cpp  (+3 more)
samples/windows/: README.md
(+383 files in other folders)
